Redesign the suppliers module UI

--- a/frontend/customers.html
+++ b/frontend/customers.html
@@ -86,7 +86,7 @@
         <div class="content-section">
             <div class="section-header">
                 <h2 class="section-title">Customer Management</h2>
-                <button class="btn btn-primary" id="addCustomerBtn">
+                <button class="btn btn-success" id="addCustomerBtn">
                     <i class="fas fa-plus"></i>
                     Add New Customer
                 </button>
