--- a/frontend/purchases.html
+++ b/frontend/purchases.html
@@ -1,23 +1,20 @@
-<!-- purchases.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Purchases - BuildMat</title>
+    <title>Purchase Orders - BuildMat</title>
     <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
     />
     <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/purchases.css" />
   </head>
   <body>
-    <script type="module" src="src/js/auth.js"></script>
-    <link rel="stylesheet" href="src/css/nav.scss" />
     <nav class="sidebar" id="sidebar">
       <div class="sidebar-header">
         <h2><i class="fas fa-building"></i> BuildMat</h2>
@@ -43,7 +40,11 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="purchases.html" class="nav-link" data-page="purchases">
+          <a
+            href="purchases.html"
+            class="nav-link active"
+            data-page="purchases"
+          >
             <i class="fas fa-shopping-cart"></i>
             Purchases
           </a>
@@ -74,31 +75,250 @@
         </li>
       </ul>
     </nav>
-    <main class="container py-4">
-      <h3>Create Purchase Order</h3>
-      <form id="poForm">
-        <div class="mb-3">
-          <label>Supplier</label>
-          <select id="poSupplier" class="form-select"></select>
+
+    <main class="main-content" id="mainContent">
+      <div class="top-bar">
+        <div style="display: flex; align-items: center; gap: 15px">
+          <button class="menu-toggle" id="menuToggle">
+            <i class="fas fa-bars"></i>
+          </button>
+          <h1 class="page-title">Purchase Order Management</h1>
         </div>
-        <table class="table" id="poItems">
-          <thead>
-            <tr>
-              <th>Material</th>
-              <th>Qty</th>
-              <th>Price</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-        <button id="addRow" class="btn btn-sm btn-outline-secondary">
-          + Item
-        </button>
-        <button type="submit" class="btn btn-primary">Submit PO</button>
-      </form>
+        <div class="user-actions">
+          <button class="logout-btn" id="logoutBtn">
+            <i class="fas fa-sign-out-alt"></i>
+            Logout
+          </button>
+        </div>
+      </div>
+
+      <div class="chart-container">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h3 class="chart-title">Purchase Orders</h3>
+          <button
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#purchaseModal"
+          >
+            <i class="fas fa-plus"></i>
+            Create Purchase Order
+          </button>
+        </div>
+
+        <div class="search-filter-section">
+          <div class="search-box">
+            <i class="fas fa-search"></i>
+            <input
+              type="text"
+              class="form-control"
+              id="searchInput"
+              placeholder="Search purchase orders..."
+            />
+          </div>
+          <select
+            class="form-select"
+            id="statusFilter"
+            style="min-width: 150px"
+          >
+            <option value="">All Status</option>
+            <option value="pending">Pending</option>
+            <option value="received">Received</option>
+            <option value="cancelled">Cancelled</option>
+          </select>
+          <select
+            class="form-select"
+            id="supplierFilter"
+            style="min-width: 200px"
+          >
+            <option value="">All Suppliers</option>
+          </select>
+        </div>
+
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>PO #</th>
+                <th>Supplier</th>
+                <th>Items</th>
+                <th>Total Amount</th>
+                <th>Status</th>
+                <th>Created Date</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="purchaseTableBody">
+              <tr>
+                <td colspan="7" class="text-center py-4">
+                  <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </main>
-    <script type="module" src="src/js/purchases.js"></script>
+
+    <!-- Purchase Order Modal -->
+    <div class="modal fade" id="purchaseModal" tabindex="-1">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="purchaseModalTitle">
+              Create Purchase Order
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="purchaseForm">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="supplierSelect" class="form-label required"
+                      >Supplier</label
+                    >
+                    <select class="form-select" id="supplierSelect" required>
+                      <option value="">Select Supplier</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="mb-3">
+                    <label for="statusSelect" class="form-label">Status</label>
+                    <select class="form-select" id="statusSelect">
+                      <option value="pending">Pending</option>
+                      <option value="received">Received</option>
+                      <option value="cancelled">Cancelled</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <label class="form-label required">Purchase Items</label>
+                <div class="items-container" id="itemsContainer">
+                  <div class="item-row">
+                    <div class="form-group">
+                      <label class="form-label">Material</label>
+                      <select class="form-select material-select" required>
+                        <option value="">Select Material</option>
+                      </select>
+                    </div>
+                    <div class="form-group" style="flex: 0 0 120px">
+                      <label class="form-label">Quantity</label>
+                      <input
+                        type="number"
+                        class="form-control quantity-input"
+                        step="0.01"
+                        required
+                      />
+                    </div>
+                    <div class="form-group" style="flex: 0 0 120px">
+                      <label class="form-label">Price</label>
+                      <input
+                        type="number"
+                        class="form-control price-input"
+                        step="0.01"
+                        required
+                      />
+                    </div>
+                    <button
+                      type="button"
+                      class="remove-item"
+                      onclick="removeItem(this)"
+                      style="display: none"
+                    >
+                      <i class="fas fa-trash"></i>
+                    </button>
+                  </div>
+                </div>
+                <button
+                  type="button"
+                  class="btn btn-success btn-sm"
+                  onclick="addItem()"
+                >
+                  <i class="fas fa-plus"></i> Add Item
+                </button>
+              </div>
+
+              <div class="mb-3">
+                <label for="invoiceFile" class="form-label"
+                  >Invoice (Optional)</label
+                >
+                <input
+                  type="file"
+                  class="form-control"
+                  id="invoiceFile"
+                  accept=".pdf,.jpg,.jpeg,.png"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="savePurchaseOrder()"
+            >
+              Save Purchase Order
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Confirm Deletion</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="text-center">
+              <i
+                class="fas fa-exclamation-triangle text-warning mb-3"
+                style="font-size: 3rem"
+              ></i>
+              <h5>Are you sure you want to delete this purchase order?</h5>
+              <p class="text-muted">This action cannot be undone.</p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-danger" id="confirmDeleteBtn">
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="src/js/pages/purchases.js" type="module"></script>
+    <script src="src/js/auth.js" type="module"></script>
   </body>
 </html>
