--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -1,70 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expenses - BuildMat</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chart.js/3.9.1/chart.min.js"></script>
-    <link rel="stylesheet" href="src/css/styles.css" />
-  </head>
-  <body>
-    <link rel="stylesheet" href="src/css/nav.scss" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="src/css/expenses.css">
+</head>
+<body>
     <nav class="sidebar" id="sidebar">
-      <div class="sidebar-header">
-        <h2><i class="fas fa-building"></i> BuildMat</h2>
-        <p>Management System</p>
-      </div>
-      <ul class="nav-menu">
-        <li class="nav-item">
-          <a href="dashboard.html" class="nav-link" data-page="dashboard">
-            <i class="fas fa-tachometer-alt"></i>
-            Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="inventory.html" class="nav-link" data-page="inventory">
-            <i class="fas fa-boxes"></i>
-            Inventory
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="sales.html" class="nav-link" data-page="sales">
-            <i class="fas fa-chart-line"></i>
-            Sales
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="purchases.html" class="nav-link" data-page="purchases">
-            <i class="fas fa-shopping-cart"></i>
-            Purchases
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="expenses.html" class="nav-link active" data-page="expenses">
-            <i class="fas fa-receipt"></i>
-            Expenses
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="reports.html" class="nav-link" data-page="reports">
-            <i class="fas fa-file-alt"></i>
-            Reports
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="suppliers.html" class="nav-link" data-page="suppliers">
-            <i class="fas fa-truck"></i>
-            Suppliers
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="customers.html" class="nav-link" data-page="customers">
-            <i class="fas fa-users"></i>
-            Customers
-          </a>
-        </li>
-      </ul>
+        <div class="sidebar-header">
+            <h2><i class="fas fa-building"></i> BuildMat</h2>
+            <p>Management System</p>
+        </div>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="dashboard.html" class="nav-link">
+                    <i class="fas fa-tachometer-alt"></i>
+                    Dashboard
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="inventory.html" class="nav-link">
+                    <i class="fas fa-boxes"></i>
+                    Inventory
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="sales.html" class="nav-link">
+                    <i class="fas fa-chart-line"></i>
+                    Sales
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="purchases.html" class="nav-link">
+                    <i class="fas fa-shopping-cart"></i>
+                    Purchases
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="expenses.html" class="nav-link active">
+                    <i class="fas fa-receipt"></i>
+                    Expenses
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="reports.html" class="nav-link">
+                    <i class="fas fa-file-alt"></i>
+                    Reports
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="suppliers.html" class="nav-link">
+                    <i class="fas fa-truck"></i>
+                    Suppliers
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="customers.html" class="nav-link">
+                    <i class="fas fa-users"></i>
+                    Customers
+                </a>
+            </li>
+        </ul>
     </nav>
-  </body>
+
+    <main class="main-content" id="mainContent">
+        <div class="top-bar">
+            <div style="display: flex; align-items: center; gap: 15px;">
+                <button class="btn btn-primary" id="menuToggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <h1 class="page-title">Expense Management</h1>
+            </div>
+            <div class="user-actions">
+                <button class="btn btn-danger" id="logoutBtn">
+                    <i class="fas fa-sign-out-alt"></i>
+                    Logout
+                </button>
+            </div>
+        </div>
+
+        <!-- Updated Stats Cards - Sales Style -->
+        <div class="row mb-4">
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon bg-primary">
+                        <i class="fas fa-receipt"></i>
+                    </div>
+                    <div class="stat-content">
+                        <h3 id="totalExpenses">0</h3>
+                        <p>Total Expenses</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon bg-success">
+                        <i class="fas fa-dollar-sign"></i>
+                    </div>
+                    <div class="stat-content">
+                        <h3 id="totalAmount">$0.00</h3>
+                        <p>Total Amount</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon bg-warning">
+                        <i class="fas fa-calendar-month"></i>
+                    </div>
+                    <div class="stat-content">
+                        <h3 id="monthlyAmount">$0.00</h3>
+                        <p>This Month</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon bg-info">
+                        <i class="fas fa-chart-bar"></i>
+                    </div>
+                    <div class="stat-content">
+                        <h3 id="avgExpense">$0.00</h3>
+                        <p>Average Expense</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Main Content -->
+        <div class="content-card">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h4>Expense Records</h4>
+                <button class="btn btn-primary" id="addExpenseBtn">
+                    <i class="fas fa-plus"></i>
+                    Add Expense
+                </button>
+            </div>
+
+            <!-- Search and Filter -->
+            <div class="search-filter-section">
+                <div class="search-box">
+                    <div class="filter-label">Search Expenses</div>
+                    <i class="fas fa-search"></i>
+                    <input type="text" class="form-control" id="searchExpense" placeholder="Search by type or description...">
+                </div>
+                <div class="filter-group">
+                    <div class="filter-label">Filter by Type</div>
+                    <select class="form-select" id="filterType">
+                        <option value="">All Types</option>
+                        <option value="delivery">Delivery</option>
+                        <option value="transport">Transport</option>
+                        <option value="labor">Labor</option>
+                        <option value="maintenance">Maintenance</option>
+                        <option value="utilities">Utilities</option>
+                        <option value="office">Office</option>
+                    </select>
+                </div>
+                <div class="filter-group">
+                    <div class="filter-label">Filter by Date</div>
+                    <input type="date" class="form-control" id="filterDate">
+                </div>
+            </div>
+
+            <!-- Loading Spinner -->
+            <div id="loadingSpinner" class="text-center py-4" style="display: none;">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+
+            <!-- Expenses Table -->
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Expense Details</th>
+                            <th>Amount</th>
+                            <th>Date</th>
+                            <th>Paid By</th>
+                            <th>Category</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="expensesTableBody">
+                        <!-- Table content will be populated by JavaScript -->
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Pagination -->
+            <div class="pagination-controls">
+                <div>
+                    <span id="pageInfo" class="text-muted">Showing 0-0 of 0 expenses</span>
+                </div>
+                <div class="btn-group">
+                    <button class="btn btn-outline-primary btn-sm" id="prevPage">
+                        <i class="fas fa-chevron-left"></i>
+                        Previous
+                    </button>
+                    <button class="btn btn-outline-primary btn-sm" id="nextPage">
+                        Next
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Add/Edit Expense Modal -->
+    <div class="modal" id="expenseModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="expenseModalLabel">Add New Expense</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="expenseForm">
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="expenseType" class="form-label">Expense Type <span class="text-danger">*</span></label>
+                                <select class="form-select" name="type" id="expenseType" required>
+                                    <option value="">Select Type</option>
+                                    <option value="delivery">Delivery</option>
+                                    <option value="transport">Transport</option>
+                                    <option value="labor">Labor</option>
+                                    <option value="maintenance">Maintenance</option>
+                                    <option value="utilities">Utilities</option>
+                                    <option value="office">Office</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="expenseAmount" class="form-label">Amount <span class="text-danger">*</span></label>
+                                <input type="number" class="form-control" name="amount" id="expenseAmount" 
+                                       step="0.01" min="0" placeholder="0.00" required>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="expenseDate" class="form-label">Date <span class="text-danger">*</span></label>
+                                <input type="date" class="form-control" name="date" id="expenseDate" required>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="expensePaidBy" class="form-label">Paid By</label>
+                                <select class="form-select" name="paid_by" id="expensePaidBy">
+                                    <option value="">Select User</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="expenseDescription" class="form-label">Description</label>
+                            <textarea class="form-control" name="description" id="expenseDescription" 
+                                      rows="3" placeholder="Enter expense details..."></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveExpenseBtn">
+                        <i class="fas fa-save"></i>
+                        Save Expense
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal" id="deleteModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-danger text-white">
+                    <h5 class="modal-title">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        Confirm Deletion
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center mb-3">
+                        <i class="fas fa-trash-alt fa-3x text-danger mb-3"></i>
+                        <h6>Are you sure you want to delete this expense?</h6>
+                        <p class="text-muted">This action cannot be undone.</p>
+                    </div>
+                    <div class="alert alert-light">
+                        <div id="deleteExpenseDetails">
+                            <!-- Expense details will be populated here -->
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">
+                        <i class="fas fa-trash"></i>
+                        Delete Expense
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Toast Container -->
+    <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="src/js/pages/expenses.js"></script>
+    <script type="module" src="src/js/auth.js"></script>
+</body>
 </html>
