--- a/frontend/sales.html
+++ b/frontend/sales.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="sidebar" id="sidebar">
       <div class="sidebar-header">
-        <h2><i class="fas fa-building"></i> BuildMat</h2>
+        <h2><i class="fas fa-building"></i> NurBuild</h2>
         <p>Management System</p>
       </div>
       <ul class="nav-menu">
@@ -40,11 +40,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a
-            href="purchases.html"
-            class="nav-link"
-            data-page="purchases"
-          >
+          <a href="purchases.html" class="nav-link" data-page="purchases">
             <i class="fas fa-shopping-cart"></i>
             Purchases
           </a>
