update minor UI issues purchases module on frontend

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <h2><i class="fas fa-building"></i> NurBuild</h2>
+            <h2><i class="fas fa-building"></i> NurCloud Build</h2>
             <p>Management System</p>
         </div>
         <ul class="nav-menu">
