--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -1,265 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard - BuildMat</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <link rel="stylesheet" href="src/css/dashboard.css">
-</head>
-<body>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="node_modules/chart.js/dist/chart.umd.js"></script>
+    <link rel="stylesheet" href="src/css/dashboard.css" />
+  </head>
+  <body>
     <nav class="sidebar" id="sidebar">
-        <div class="sidebar-header">
-            <h2><i class="fas fa-building"></i> NurCloud Build</h2>
-            <p>Management System</p>
-        </div>
-        <ul class="nav-menu">
-            <li class="nav-item">
-                <a href="dashboard.html" class="nav-link active">
-                    <i class="fas fa-tachometer-alt"></i>
-                    Dashboard
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="inventory.html" class="nav-link">
-                    <i class="fas fa-boxes"></i>
-                    Inventory
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="sales.html" class="nav-link">
-                    <i class="fas fa-chart-line"></i>
-                    Sales
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="purchases.html" class="nav-link">
-                    <i class="fas fa-shopping-cart"></i>
-                    Purchases
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="expenses.html" class="nav-link">
-                    <i class="fas fa-receipt"></i>
-                    Expenses
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="reports.html" class="nav-link">
-                    <i class="fas fa-file-alt"></i>
-                    Reports
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="suppliers.html" class="nav-link">
-                    <i class="fas fa-truck"></i>
-                    Suppliers
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="customers.html" class="nav-link">
-                    <i class="fas fa-users"></i>
-                    Customers
-                </a>
-            </li>
-        </ul>
+      <div class="sidebar-header">
+        <h2><i class="fas fa-building"></i> NurBuild</h2>
+        <p>Management System</p>
+      </div>
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="dashboard.html" class="nav-link active">
+            <i class="fas fa-tachometer-alt"></i>
+            Dashboard
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="inventory.html" class="nav-link">
+            <i class="fas fa-boxes"></i>
+            Inventory
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="sales.html" class="nav-link">
+            <i class="fas fa-chart-line"></i>
+            Sales
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="purchases.html" class="nav-link">
+            <i class="fas fa-shopping-cart"></i>
+            Purchases
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="expenses.html" class="nav-link">
+            <i class="fas fa-receipt"></i>
+            Expenses
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="suppliers.html" class="nav-link">
+            <i class="fas fa-truck"></i>
+            Suppliers
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="customers.html" class="nav-link">
+            <i class="fas fa-users"></i>
+            Customers
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="reports.html" class="nav-link">
+            <i class="fas fa-file-alt"></i>
+            Reports
+          </a>
+        </li>
+      </ul>
     </nav>
 
     <main class="main-content" id="mainContent">
-        <div class="top-bar">
-            <div style="display: flex; align-items: center; gap: 15px">
-                <button class="menu-toggle" id="menuToggle">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <h1 class="page-title">Dashboard Overview</h1>
+      <div class="top-bar">
+        <div style="display: flex; align-items: center; gap: 15px">
+          <button class="menu-toggle" id="menuToggle">
+            <i class="fas fa-bars"></i>
+          </button>
+          <h1 class="page-title">Dashboard Overview</h1>
+        </div>
+        <div class="user-actions">
+          <button class="logout-btn" id="logoutBtn">
+            <i class="fas fa-sign-out-alt"></i>
+            Logout
+          </button>
+        </div>
+      </div>
+
+      <!-- Key Statistics Cards -->
+      <div class="row mb-4">
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-primary">
+              <i class="fas fa-boxes"></i>
             </div>
-            <div class="user-actions">
-                <button class="logout-btn" id="logoutBtn">
-                    <i class="fas fa-sign-out-alt"></i>
-                    Logout
-                </button>
+            <div class="stat-content">
+              <h3 id="totalInventoryValue">$0</h3>
+              <p>Total Inventory Value</p>
             </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-success">
+              <i class="fas fa-chart-line"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="monthlySales">$0</h3>
+              <p>Monthly Sales</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-warning">
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="monthlyPurchases">$0</h3>
+              <p>Monthly Purchases</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-md-6 mb-3">
+          <div class="stat-card">
+            <div class="stat-icon bg-info">
+              <i class="fas fa-receipt"></i>
+            </div>
+            <div class="stat-content">
+              <h3 id="monthlyExpenses">$0</h3>
+              <p>Monthly Expenses</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Quick Stats -->
+      <div class="quick-stats">
+        <div class="quick-stat">
+          <i class="fas fa-users"></i>
+          <h4 id="totalCustomers">0</h4>
+          <p>Active Customers</p>
+        </div>
+        <div class="quick-stat">
+          <i class="fas fa-truck"></i>
+          <h4 id="totalSuppliers">0</h4>
+          <p>Suppliers</p>
+        </div>
+        <div class="quick-stat">
+          <i class="fas fa-cubes"></i>
+          <h4 id="totalMaterials">0</h4>
+          <p>Material Types</p>
+        </div>
+        <div class="quick-stat">
+          <i class="fas fa-exclamation-triangle"></i>
+          <h4 id="lowStockItems">0</h4>
+          <p>Low Stock Items</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <!-- Monthly Summary Chart -->
+        <div class="col-lg-8 mb-4">
+          <div class="content-card">
+            <h4 class="mb-3">
+              <i class="fas fa-chart-bar me-2"></i>
+              Monthly Financial Summary
+            </h4>
+            <div class="chart-container">
+              <canvas id="monthlyChart"></canvas>
+            </div>
+          </div>
         </div>
 
-        <!-- Key Statistics Cards -->
-        <div class="row mb-4">
-            <div class="col-xl-3 col-md-6 mb-3">
-                <div class="stat-card">
-                    <div class="stat-icon bg-primary">
-                        <i class="fas fa-boxes"></i>
-                    </div>
-                    <div class="stat-content">
-                        <h3 id="totalInventoryValue">$0</h3>
-                        <p>Total Inventory Value</p>
-                    </div>
-                </div>
+        <!-- Recent Activities -->
+        <div class="col-lg-4 mb-4">
+          <div class="content-card">
+            <h4 class="mb-3">
+              <i class="fas fa-clock me-2"></i>
+              Recent Activities
+            </h4>
+            <div id="recentActivities">
+              <!-- Activities will be loaded here -->
             </div>
-            <div class="col-xl-3 col-md-6 mb-3">
-                <div class="stat-card">
-                    <div class="stat-icon bg-success">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <div class="stat-content">
-                        <h3 id="monthlySales">$0</h3>
-                        <p>Monthly Sales</p>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <!-- Top Selling Materials -->
+        <div class="col-lg-6 mb-4">
+          <div class="content-card">
+            <h4 class="mb-3">
+              <i class="fas fa-star me-2"></i>
+              Top Selling Materials
+            </h4>
+            <div class="chart-container">
+              <canvas id="topSellingChart"></canvas>
             </div>
-            <div class="col-xl-3 col-md-6 mb-3">
-                <div class="stat-card">
-                    <div class="stat-icon bg-warning">
-                        <i class="fas fa-shopping-cart"></i>
-                    </div>
-                    <div class="stat-content">
-                        <h3 id="monthlyPurchases">$0</h3>
-                        <p>Monthly Purchases</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-6 mb-3">
-                <div class="stat-card">
-                    <div class="stat-icon bg-info">
-                        <i class="fas fa-receipt"></i>
-                    </div>
-                    <div class="stat-content">
-                        <h3 id="monthlyExpenses">$0</h3>
-                        <p>Monthly Expenses</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
 
-        <!-- Quick Stats -->
-        <div class="quick-stats">
-            <div class="quick-stat">
-                <i class="fas fa-users"></i>
-                <h4 id="totalCustomers">0</h4>
-                <p>Active Customers</p>
+        <!-- Inventory Status -->
+        <div class="col-lg-6 mb-4">
+          <div class="table-container">
+            <h4 class="mb-3">
+              <i class="fas fa-warehouse me-2"></i>
+              Inventory Status
+            </h4>
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Material</th>
+                    <th>Stock</th>
+                    <th>Status</th>
+                    <th>Value</th>
+                  </tr>
+                </thead>
+                <tbody id="inventoryStatusTable">
+                  <!-- Inventory data will be loaded here -->
+                </tbody>
+              </table>
             </div>
-            <div class="quick-stat">
-                <i class="fas fa-truck"></i>
-                <h4 id="totalSuppliers">0</h4>
-                <p>Suppliers</p>
-            </div>
-            <div class="quick-stat">
-                <i class="fas fa-cubes"></i>
-                <h4 id="totalMaterials">0</h4>
-                <p>Material Types</p>
-            </div>
-            <div class="quick-stat">
-                <i class="fas fa-exclamation-triangle"></i>
-                <h4 id="lowStockItems">0</h4>
-                <p>Low Stock Items</p>
-            </div>
+          </div>
         </div>
+      </div>
 
-        <div class="row">
-            <!-- Monthly Summary Chart -->
-            <div class="col-lg-8 mb-4">
-                <div class="content-card">
-                    <h4 class="mb-3">
-                        <i class="fas fa-chart-bar me-2"></i>
-                        Monthly Financial Summary
-                    </h4>
-                    <div class="chart-container">
-                        <canvas id="monthlyChart"></canvas>
-                    </div>
+      <!-- Financial Overview -->
+      <div class="row">
+        <div class="col-12">
+          <div class="content-card">
+            <h4 class="mb-3">
+              <i class="fas fa-chart-pie me-2"></i>
+              Financial Overview
+            </h4>
+            <div class="row">
+              <div class="col-md-8">
+                <div class="chart-container">
+                  <canvas id="financialChart"></canvas>
                 </div>
-            </div>
-
-            <!-- Recent Activities -->
-            <div class="col-lg-4 mb-4">
-                <div class="content-card">
-                    <h4 class="mb-3">
-                        <i class="fas fa-clock me-2"></i>
-                        Recent Activities
-                    </h4>
-                    <div id="recentActivities">
-                        <!-- Activities will be loaded here -->
-                    </div>
+              </div>
+              <div class="col-md-4">
+                <div class="d-flex flex-column gap-3">
+                  <div class="p-3 bg-light rounded">
+                    <h6 class="mb-1">Net Profit Margin</h6>
+                    <h4 class="text-success mb-0" id="profitMargin">0%</h4>
+                  </div>
+                  <div class="p-3 bg-light rounded">
+                    <h6 class="mb-1">Revenue Growth</h6>
+                    <h4 class="text-primary mb-0" id="revenueGrowth">0%</h4>
+                  </div>
+                  <div class="p-3 bg-light rounded">
+                    <h6 class="mb-1">Expense Ratio</h6>
+                    <h4 class="text-warning mb-0" id="expenseRatio">0%</h4>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-
-        <div class="row">
-            <!-- Top Selling Materials -->
-            <div class="col-lg-6 mb-4">
-                <div class="content-card">
-                    <h4 class="mb-3">
-                        <i class="fas fa-star me-2"></i>
-                        Top Selling Materials
-                    </h4>
-                    <div class="chart-container">
-                        <canvas id="topSellingChart"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Inventory Status -->
-            <div class="col-lg-6 mb-4">
-                <div class="table-container">
-                    <h4 class="mb-3">
-                        <i class="fas fa-warehouse me-2"></i>
-                        Inventory Status
-                    </h4>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Material</th>
-                                    <th>Stock</th>
-                                    <th>Status</th>
-                                    <th>Value</th>
-                                </tr>
-                            </thead>
-                            <tbody id="inventoryStatusTable">
-                                <!-- Inventory data will be loaded here -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Financial Overview -->
-        <div class="row">
-            <div class="col-12">
-                <div class="content-card">
-                    <h4 class="mb-3">
-                        <i class="fas fa-chart-pie me-2"></i>
-                        Financial Overview
-                    </h4>
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="chart-container">
-                                <canvas id="financialChart"></canvas>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="d-flex flex-column gap-3">
-                                <div class="p-3 bg-light rounded">
-                                    <h6 class="mb-1">Net Profit Margin</h6>
-                                    <h4 class="text-success mb-0" id="profitMargin">0%</h4>
-                                </div>
-                                <div class="p-3 bg-light rounded">
-                                    <h6 class="mb-1">Revenue Growth</h6>
-                                    <h4 class="text-primary mb-0" id="revenueGrowth">0%</h4>
-                                </div>
-                                <div class="p-3 bg-light rounded">
-                                    <h6 class="mb-1">Expense Ratio</h6>
-                                    <h4 class="text-warning mb-0" id="expenseRatio">0%</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </main>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="src/js/pages/dashboard.js" type="module"></script>
     <script src="src/js/auth.js" type="module"></script>
-</body>
+  </body>
 </html>
