--- a/frontend/purchases.html
+++ b/frontend/purchases.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/purchases.css" />
@@ -56,12 +56,6 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="reports.html" class="nav-link" data-page="reports">
-            <i class="fas fa-file-alt"></i>
-            Reports
-          </a>
-        </li>
-        <li class="nav-item">
           <a href="suppliers.html" class="nav-link" data-page="suppliers">
             <i class="fas fa-truck"></i>
             Suppliers
@@ -71,6 +65,12 @@
           <a href="customers.html" class="nav-link" data-page="customers">
             <i class="fas fa-users"></i>
             Customers
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="reports.html" class="nav-link" data-page="reports">
+            <i class="fas fa-file-alt"></i>
+            Reports
           </a>
         </li>
       </ul>
