implement an end to end debts feature for this project

--- a/frontend/sales.html
+++ b/frontend/sales.html
@@ -64,6 +64,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="debts.html" class="nav-link" data-page="debts">
+            <i class="fas fa-credit-card"></i>
+            Debts
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="reports.html" class="nav-link" data-page="reports">
             <i class="fas fa-file-alt"></i>
             Reports
