--- a/frontend/reports.html
+++ b/frontend/reports.html
@@ -64,6 +64,12 @@
           </a>
         </li>
         <li class="nav-item">
+          <a href="debts.html" class="nav-link">
+            <i class="fas fa-credit-card"></i>
+            Debts
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="reports.html" class="nav-link active">
             <i class="fas fa-file-alt"></i>
             Reports
