--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -214,14 +214,8 @@
             </table>
           </div>
 
-          <div class="pagination-controls">
-            <div>
-              Showing <span id="materials-showing">1-10</span> of
-              <span id="materials-total">0</span> materials
-            </div>
-            <div class="pagination" id="materials-pagination">
-              <!-- Pagination buttons will be generated here -->
-            </div>
+          <div class="pagination" id="materials-pagination">
+            <!-- Pagination buttons will be generated here -->
           </div>
         </div>
 
@@ -266,6 +260,10 @@
               </tbody>
             </table>
           </div>
+          
+          <div class="pagination" id="categories-pagination">
+            <!-- Pagination buttons will be generated here -->
+          </div>
         </div>
 
         <!-- Units Tab -->
@@ -307,6 +305,10 @@
                 <!-- Units will be loaded here -->
               </tbody>
             </table>
+          </div>
+          
+          <div class="pagination" id="units-pagination">
+            <!-- Pagination buttons will be generated here -->
           </div>
         </div>
 
@@ -371,14 +373,8 @@
             </table>
           </div>
 
-          <div class="pagination-controls">
-            <div>
-              Showing <span id="adjustments-showing">1-10</span> of
-              <span id="adjustments-total">0</span> adjustments
-            </div>
-            <div class="pagination" id="adjustments-pagination">
-              <!-- Pagination buttons will be generated here -->
-            </div>
+          <div class="pagination" id="adjustments-pagination">
+            <!-- Pagination buttons will be generated here -->
           </div>
         </div>
       </div>
