--- a/frontend/purchases.html
+++ b/frontend/purchases.html
@@ -164,6 +164,17 @@
             </tbody>
           </table>
         </div>
+        
+        <!-- Pagination -->
+        <div class="pagination" id="pagination">
+          <button class="pagination-btn" id="prevBtn" disabled>
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <span id="pageInfo">Page 1 of 1</span>
+          <button class="pagination-btn" id="nextBtn" disabled>
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
       </div>
     </main>
 
