fix some inconsistent UI accross some modules.

--- a/frontend/customers.html
+++ b/frontend/customers.html
@@ -102,7 +102,7 @@
       <div class="content-section">
         <div class="section-header">
           <h2 class="section-title">Customer Management</h2>
-          <button class="btn btn-success" id="addCustomerBtn">
+          <button class="btn btn-primary" id="addCustomerBtn">
             <i class="fas fa-plus"></i>
             Add New Customer
           </button>
@@ -293,7 +293,7 @@
             <button type="button" class="btn btn-secondary" id="cancelBtn">
               Cancel
             </button>
-            <button type="submit" class="btn btn-success" id="saveBtn">
+            <button type="submit" class="btn btn-primary" id="saveBtn">
               <i class="fas fa-save"></i>
               Save Customer
             </button>
