--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -306,7 +306,7 @@
               </div>
             </form>
           </div>
-          <div class="modal-footer">
+          <div class="modal-footer gap-2">
             <button
               type="button"
               class="btn btn-secondary"
@@ -350,7 +350,7 @@
               </div>
             </div>
           </div>
-          <div class="modal-footer">
+          <div class="modal-footer gap-2">
             <button
               type="button"
               class="btn btn-secondary"
