--- a/frontend/suppliers.html
+++ b/frontend/suppliers.html
@@ -113,20 +113,20 @@
             </div>
             <div class="d-flex gap-2">
               <button
-                class="btn btn-sm btn-success"
+                class="btn btn-primary"
                 data-bs-toggle="modal"
                 data-bs-target="#supplierModal"
               >
                 <i class="fas fa-plus"></i> Add Supplier
               </button>
               <button
-                class="btn btn-outline-primary btn-sm"
+                class="btn btn-warning"
                 onclick="exportSuppliers()"
               >
                 <i class="fas fa-download"></i> Export
               </button>
               <button
-                class="btn btn-outline-info btn-sm"
+                class="btn btn-info"
                 onclick="importSuppliers()"
               >
                 <i class="fas fa-upload"></i> Import
@@ -448,7 +448,7 @@
               </div>
             </div>
 
-            <div class="modal-footer">
+            <div class="modal-footer gap-2">
               <button
                 type="button"
                 class="btn btn-secondary"
